# Ticket

./: .gitignore  All_in_1.cpp  CMakeLists.txt  account.hpp  bpt_main.cpp  bptree.hpp  code  draft.txt  file.hpp  main.cpp  unequal_bpt_main.cpp  unequal_bptree.hpp  utils.hpp  vector.hpp
